addded BULMA link and blue button :)

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanye Weather</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    
 </head>
 <body>
     <h1> Kanye Weather</h1>
     <label for="locationInput">Enter Your Location:</label>
     <input type="text" id="locationInput" placeholder="E.g., City, Country">
     <br>
-    <input type="button" value="Find My Location">
+    <input class="button is-info" type="button" value="Find My Location">
 
 
 </body>
