apis linked, injected in temp div

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <br>
     <section>
     <p id="quoteContainer"></p>
+    <!-- temp div to see and style the quote and weather, working on icon and need input for how this should look so I know what types of weather data we want and how we want that conveyed to the user -->
+    <div id="weatherContainer"></div> 
+    <!--end of temp div -->
         </section>
 
         
