edits to html and js for modal

--- a/index.html
+++ b/index.html
@@ -47,22 +47,8 @@
            </div>
         </div>
      </section>
-
-
-     <script>
-    $(".modal-button").click(function() {
-    var target = $(this).data("target");
-    $("html").addClass("is-clipped");
-    $(target).addClass("is-active");
-    });
-    
-    $(".modal-close").click(function() {
-    $("html").removeClass("is-clipped");
-    $(this).parent().removeClass("is-active");
-    });
-     </script>
-     
-
+   
+<script src="./assets/script.js"></script>
 </body>
 
 </html>
