working modal dissappear

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 
-    <section class="section">
+    <section id="startContainer">
         <div class="container">
             <span class="title">
                 Kanye's Modal
@@ -89,7 +89,7 @@
     //show modal on start click
     $('#start').click(function () {
         //hide modal on exit
-        $('.startContainer').hide();
+        $('#startContainer').hide();
         $('#kanye').show();
 
       });
