ye inspiration button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         <input type="button" value="Find My Location">
 
         <section>
+            <br>
+           <input type="button" value="ye... inspire me">
             <p id="quoteContainer"></p>
+            
             <!-- temp div to see and style the quote and weather, working on icon and need input for how this should look so I know what types of weather data we want and how we want that conveyed to the user -->
             <div id="weatherContainer"></div>
             <!--end of temp div -->
@@ -83,18 +86,6 @@
 
         <script src="assets\script.js">
         </script>
-
-<script>
-    $(document).ready(function () {
-    //show modal on start click
-    $('#start').click(function () {
-        //hide modal on exit
-        $('#startContainer').hide();
-        $('#kanye').show();
-
-      });
-});
-</script>
 </body>
 
 </html>
