added icon, commented out html to avoid breaking doc

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
     <!-- temp div to see and style the quote and weather, working on icon and need input for how this should look so I know what types of weather data we want and how we want that conveyed to the user -->
     <div id="weatherContainer"></div> 
     <!--end of temp div -->
+    <!-- new temp div for map or icon -->
+    <!-- <div id="mapContainer">
+
+         Should be display:hidden behind button as the api only loads after the event listener is clicked -->
+        
+        <!-- <img id="theMap" src="" alt="Weather map in current location"> -->
+
+
+    <!-- </div> -->
+
+    <!-- end of temp div #2 -->
         </section>
 
         
