--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
         </section>
         <!-- temp div to see and style the quote and weather, working on icon and need input for how this should look so I know what types of weather data we want and how we want that conveyed to the user -->
         <section>
-             id="weatherContainer">
+             
                 <ul>
-                    <li>weather:</li>
-                    <li>wind speed:</li>
-                    <li>real feel:</li>
+                    <li id="theMap"></li>
+                    <li id="temperature">Temperature in F:</li>
+                    <li id="realFeel">Real Feel:</li>
+                    <li id="weatherConditions">Weather Conditions:</li>
+                    <li id="uvIndex">UV index:</li>
+                    <li id="precipitation">Precipitation:</li>
+                    <li id="visibility">Visibility:</li>
+                    <li id="humidity">Humidity:</li>
                 </ul>
             
             <!--end of temp div -->
