--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <p id="quoteContainer"></p>
         </section>
         <!-- temp div to see and style the quote and weather, working on icon and need input for how this should look so I know what types of weather data we want and how we want that conveyed to the user -->
-        <section>
-             id="weatherContainer">
+        <section id="weatherContainer">
                 <ul>
                     <li>weather:</li>
                     <li>wind speed:</li>
