--- a/index.html
+++ b/index.html
@@ -8,17 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <style>
-        .modal {
-            display: flex !important;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .modal-content {
-            max-width: 80%;
-        }
-    </style>
+<link rel="stylesheet" href="assets\style.css">
 </head>
 
 <body>
