deleted display weather, new info added

--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
         <section>
              
                 <ul>
-                    <li id="theMap"></li>
+                    <li id="iconPic"><img id="theMap" src="" alt="Weather icon that depicts the current weather in your location"> </li> 
                     <li id="temperature">Temperature in F:</li>
                     <li id="realFeel">Real Feel:</li>
-                    <li id="weatherConditions">Weather Conditions:</li>
-                    <li id="uvIndex">UV index:</li>
+                    <li id="weatherConditions">Weather Conditions:</li> 
                     <li id="precipitation">Precipitation:</li>
                     <li id="visibility">Visibility:</li>
                     <li id="humidity">Humidity:</li>
