Added New Title

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 <body>
     <header>
         <h1>
-            Welcome to Kanye Weather!    
+            Cloudy with a chance of Ye !    
         </h1>
     </header>
     <br>
     <div id="kanye" style="display: none;">
 
 <!-- Location Input -->
-
+<!-- 
         <label for="locationInput">Enter your Location:</label>
         <input type="text" id="locationInput" placeholder="E.g., City, Country">
         <input type="button" value="Find My Location">
 
         <section>
-            <br>
+            <br> -->
 <!-- randomize -->
             <input type="button" onclick="getRandomKanyeQuote()" value="ye... inspire me">
             <p id="quoteContainer"></p>
