local storage counter clear clear

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <section>
                 <br> -->
-        <!-- randomize -->
+        <!-- randomize Kanye quote -->
         <input type="button" onclick="getRandomKanyeQuote()" value="ye... inspire me">
         <p id="quoteContainer"></p>
         </section>
@@ -46,6 +46,11 @@
                 <li id="humidity">Humidity:</li>
             </ul>
             <!--end of temp div -->
+        </section>
+    </div>
+    <div>
+        <section>
+            <p id="loadCount">Page Load Count</p>
         </section>
     </div>
     <br>
