--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div>
         <section>
             <p id="loadCount">Page Load Count</p>
+            <button id="resetButton">Reset Page Load Count</button>
         </section>
     </div>
     <br>
