--- a/index.html
+++ b/index.html
@@ -7,40 +7,58 @@
     <title>Kanye Weather</title>
     <style>
         body {
-            font-family: 'Impact', sans-serif; /* Use the Impact font or a similar sans-serif font */
+            font-family: 'Bebas Neue', sans-serif; /* Use Bebas Neue or a similar bold font */
             text-align: center;
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
-        body, h1, p, li, a {
-            font-family: 'Impact', sans-serif; /* Apply the font to all relevant elements */
+        h1, h2, p, li, a, button {
+            font-family: 'Bebas Neue', sans-serif; /* Apply the font to all relevant elements */
+        }
+        h1 {
+            margin-bottom: 20px;
+        }
+        section {
+            margin-bottom: 20px;
+        }
+        #kanye, #startContainer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        #startContainer {
+            margin-top: 20px;
+        }
+        #resetButton {
+            margin-top: 20px;
+        }
+        #resetMessage, #loadCount {
+            margin: 0;
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap">
     <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
-<body style="text-align: center;">
+<body>
     <header>
         <h1>
             Cloudy with a chance of Ye !
         </h1>
     </header>
-    <br>
+
     <div id="kanye" style="display: none;">
-
-        <!-- Location Input -->
-        <!-- 
-            <label for="locationInput">Enter your Location:</label>
-            <input type="text" id="locationInput" placeholder="E.g., City, Country">
-            <input type="button" value="Find My Location">
-
-            <section>
-                <br> -->
         <!-- randomize Kanye quote -->
         <input type="button" onclick="getRandomKanyeQuote()" value="ye... inspire me">
         <p id="quoteContainer"></p>
-        </section>
         <!-- temp div to see and style the quote and weather, working on icon and need input for how this should look so I know what types of weather data we want and how we want that conveyed to the user -->
         <section>
             <ul>
@@ -52,18 +70,10 @@
                 <li id="visibility">Visibility:</li>
                 <li id="humidity">Humidity:</li>
             </ul>
-            <!--end of temp div -->
         </section>
     </div>
-    <div>
-        <section>
-            <p id="loadCount">Page Load Count</p>
-            <button id="resetButton">Reset Page Load Count</button>
-        </section>
-    </div>
-    <br>
 
-    <section id="startContainer" style="text-align: center;">
+    <section id="startContainer">
         <div class="container">
             <span class="title">
                 <!-- Ye's Modal -->
@@ -73,6 +83,16 @@
             </p>
         </div>
     </section>
+
+    <section>
+        <p id="resetMessage">Page load count has been reset.</p>
+        <p id="loadCount">This page has been loaded <span id="counter">0</span> times.</p>
+    </section>
+
+    <div style="margin-top: 20px;">
+        <button id="resetButton" class="button is-danger is-primary">Reset Page Load Count</button>
+    </div>
+
     <div id="modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-content">
@@ -101,6 +121,20 @@
     </div>
 
     <script src="assets/script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            if (typeof(Storage) !== "undefined") {
+                let pageLoadCount = localStorage.getItem('pageLoadCount') || 0;
+                document.getElementById('counter').textContent = pageLoadCount;
+
+                document.getElementById('resetButton').addEventListener('click', function () {
+                    localStorage.removeItem('pageLoadCount');
+                    document.getElementById('counter').textContent = 0;
+                    document.getElementById('resetMessage').textContent = 'Page load count has been reset.';
+                });
+            } 
+        });
+    </script>
 </body>
 
 </html>
