ye button bigger and styled

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div id="kanye" style="display: none;">
         <!-- randomize Kanye quote -->
-        <input type="button" onclick="getRandomKanyeQuote()" value="ye... inspire me">
+        <input class="button is-danger is-primary" type="button" onclick="getRandomKanyeQuote()" value="ye... inspire me">
         <p id="quoteContainer"></p>
         <!-- temp div to see and style the quote and weather, working on icon and need input for how this should look so I know what types of weather data we want and how we want that conveyed to the user -->
         <section>
