gave up, added m

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 <body>
     <header>
-        <h1 class="is-size-2">
+        <h1>
             Cloudy with a chance of Ye !
         </h1>
     </header>
 
     <div id="kanye" style="display: none;">
         <!-- randomize Kanye quote -->
-        <input class="button is-danger is-primary" type="button" onclick="getRandomKanyeQuote()" value="ye... inspire me">
+        <input type="button" onclick="getRandomKanyeQuote()" value="ye... inspire me">
         <p id="quoteContainer"></p>
         <!-- temp div to see and style the quote and weather, working on icon and need input for how this should look so I know what types of weather data we want and how we want that conveyed to the user -->
         <section>
@@ -67,6 +67,7 @@
                 <li id="realFeel">Real Feel:</li>
                 <li id="weatherConditions">Weather Conditions:</li>
                 <li id="precipitation">Precipitation:</li>
+                <li id="visibility">Visibility:</li>
                 <li id="humidity">Humidity:</li>
             </ul>
         </section>
