--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <body>
     <header>
-        <h1>
+        <h1 class="is-size-2">
             Cloudy with a chance of Ye !
         </h1>
     </header>
